# cairn

./: .gitignore  CASE-REPO-SPEC.md  CORPUS-SPEC.md  Containerfile  README.md  pyproject.toml  requirements.txt
assessment/: ASSESSMENT.md  AUDIT.json  FRECHET.md  HEAD_TO_HEAD.md  OLLAMA.md  OPENROUTER.md  baseline.json  build_assessment.py  build_frechet.py  build_headtohead.py  corpus_arms.json  frechet.json  frechet_pba_check.py  gen_prompts.py  head_to_head.json  neff_recompute.json  oai_assess.py  ollama_assess.py  openrouter_assess.py  panel.py  partitions.json  probes-amyloid.json  probes-anversa.json  probes-cern.json  probes-eggs.json  probes-ivermectin.json  probes-poldermans.json  probes.json  prompts.json  raw_votes.json  recompute_neff.py  sensitivity.json  sensitivity.py  zai_assess.py
cairn/: __init__.py  assessment.py  canonical.py  cases.py  cli.py  corpus.py  envelope.py  frechet.py  grounding.py  headtohead.py  importer.py  keys.py  neff.py  provenance.py  trusty.py
demo/: hsm_trio.py  worked_examples.py
fixtures/: CASES.json  INDEX.json  PROVENANCE-amyloid.md  PROVENANCE-anversa.md  PROVENANCE-cern.md  PROVENANCE-ivermectin.md  PROVENANCE-poldermans.md  PROVENANCE.md  build_fixtures.py  claim-abeta56-detection-method.json  claim-abeta56-human-brain.json  claim-abeta56-impairs-memory.json  claim-anversa-caduceus.json  claim-anversa-human.json  claim-anversa-origin.json  claim-anversa-scipio.json  claim-ascertainment-centroid.json  claim-bouri-secure.json  claim-cern-astro-stability.json  claim-cern-bh-production-rate.json  claim-decrease-1.json  (+60 more)
(+72 files in other folders)
