[project]
name = "cairn"
version = "0.0.1"
description = "The decoupled epistack scoring engine: a content-addressed/signed knowledge record + a measured n_eff + a shared-upstream refuse-to-combine detector."
requires-python = ">=3.10"
dependencies = ["jsonschema>=4", "cryptography>=41", "rfc8785>=0.1.2"]

# The scored core is stdlib-light. `analysis` is a an internal library extra only:
# `pba` (numpy/scipy/matplotlib) independently cross-checks the A3 Fréchet bounds
# (assessment/frechet_pba_check.py) — never imported by the core or the container.
[project.optional-dependencies]
analysis = ["pba"]

[project.scripts]
cairn = "cairn.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cairn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
